Fixed side scroll on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -114,9 +114,7 @@ img {
   width: 100%;
 }
 
-figure {
-  margin: 0;
-}
+
  
 ul, 
 ol {
@@ -155,24 +153,17 @@ font-family: 'Nunito Sans', sans-serif;
 }
  
  
-address {
-font-family: 'Nunito Sans', sans-serif;
-  font-size: 0.8em;
-  line-height: 1.5em;
-  font-style:normal;
 
-}
+
+
   
   
-  .content-wrapper {
-    width: 90%;
-    margin: 50px 0;
-  }
   
   /* -------------------- Base Header - Footer Styles -------------------- */
   
   header,
   footer {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -180,8 +171,9 @@ font-family: 'Nunito Sans', sans-serif;
   }
   
   header {
-    padding: 15px 0;
+  
     background: #202322;
+    width: 100%;
   }
   
   header .content-wrapper {
@@ -192,11 +184,7 @@ font-family: 'Nunito Sans', sans-serif;
     margin: 0;
   }
   
-  .header-divider {
-    width: 100%;
-    height: 1px;
-    margin: 10px 0 20px 0;
-  }
+  
   
   header nav {
     display: flex;
@@ -213,13 +201,7 @@ font-family: 'Nunito Sans', sans-serif;
     text-transform: uppercase;
   }
 
-  header figure {
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
+ 
   
   footer {
     flex-direction: column;
@@ -295,7 +277,7 @@ nav {
 
   display: flex;
   align-items: center;
-	justify-content: center;
+	justify-content: space-between;
 	flex-flow: row wrap; 
 	width: 100%;
   
@@ -309,12 +291,13 @@ nav ul {
 nav ul li {
   width: 100%;
   text-align: center;
+  padding: 5px;
  
 }
 nav ul li a {
   color: #351D77;
   font-size: 1em;
-  padding: 1rem;
+ 
   text-decoration: none;
   text-transform: uppercase;
   text-align: center;
